--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,7 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+img[alt="企业微信群"]{
+  width:100px;
+}
